--- a/angular.json
+++ b/angular.json
@@ -114,6 +114,11 @@
               "src/**/*.html"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "baseHref": "/AngularTest/",
+          "outputPath": "dist/"
         }
       }
     }
